<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:weightSum="10"
    android:gravity="center">

    <TextView
        android:padding="5dp"
        android:background="#d4f737"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        style="@style/TextAppearance.AppCompat.Large"
        android:text="Welcome to Baangladesh"/>

    <LinearLayout
        android:layout_weight="6"
        android:weightSum="3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center">
        <ImageView
            android:layout_weight="3"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:layout_height="250dp"
            android:src="@drawable/bangladesh71"/>


        <Button
            android:id="@+id/voyageToBangladeshButtonId"
            android:layout_weight="1"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#fce40a"
            android:text="@string/main_activity_title"
            android:textAllCaps="false"
            />

    </LinearLayout>



    <LinearLayout
        android:gravity="center"
        android:background="@drawable/layout_background"
        android:layout_weight="3"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center">


            <TextView
                android:textAlignment="center"

                android:padding="10dp"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Small"
                android:text="@string/about_bangladesh"/>

    </LinearLayout>


    <Button
        android:id="@+id/aboutButtonId"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:layout_marginTop="15sp"
        android:background="#91ae07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_devlopar_string"
        style="@style/TextAppearance.AppCompat.Large"
        android:padding="10dp"/>








    

</LinearLayout>